# python-microservice-scaffolding

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Readme.md  Taskfile.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  api.py
app/api/api_v1/endpoints/: __init__.py  items.py
app/core/: __init__.py  config.py  logging.py  metrics.py  rest_client.py
app/db/: __init__.py  database.py  init.py  init_db.py
app/models/: __init__.py  base.py  item.py
app/repositories/: __init__.py  base.py  item_repository.py
app/schemas/: __init__.py  item.py
app/services/: __init__.py  item_service.py
docker-entrypoint-initdb.d/: init-databases.sh
docs/: docs_openapi.yaml  openapi.yaml
docs/source/: conf.py  index.rst  introduction.rst
scripts/: combine_openapi.py  create_tables.py  generate_openapi.py
src/core/database/: database.py
src/core/fastapi/: api_handler.py
src/database/: database.py
src/fastapi/: api_handler.py
src/features/health/controllers/: health.py
src/features/health/services/: health.py
src/features/items/controllers/: items.py
src/features/items/models/: items.py
src/features/items/services/: items.py
src/services/health/controllers/: health.py
src/services/health/openapi/: health.yml  schemas.yml
src/services/health/routers/: health.py
src/services/items/controllers/: items.py
src/services/items/models/: items.py
src/services/items/openapi/: items.yml  schemas.yml
src/services/items/routers/: items.py
src/static/: base_template.yaml  opeanpi.yaml
src/utils/: constants.py  logging.py
tests/: __init__.py  conftest.py  test_openapi.yaml  test_rest_client.py
tests/api/: __init__.py  test_items.py
tests/unit/: test_endpoint_health.py  test_endpoint_items.py
